--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -16,9 +16,15 @@
 				<tr>
 					<th></th>
 					<th>Customer</th>
-					<th>Orders</th>
+					<th>Phone</th>
 				</tr>
+				{% for customer in customers %}
+					<tr>
+						<td>{{customer.name}}</td>
+						<td>{{customer.phone}}</td>
 
+					</tr>
+				{% endfor %}
 			</table>
 		</div>
 	</div>
@@ -31,11 +37,19 @@
 			<table class="table table-sm">
 				<tr>
 					<th>Product</th>
-					<th>Date Orderd</th>
+					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
 				</tr>
+				{% for order in orders %}
+					<tr>
+
+						<td>{{order.date_created}}</td>
+						<td>{{order.status}}</td>
+
+					</tr>
+				{% endfor %}
 
 			</table>
 		</div>
