--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -44,10 +44,11 @@
 				</tr>
 				{% for order in orders %}
 					<tr>
-
+						<td>{{order.product}}</td>
 						<td>{{order.date_created}}</td>
 						<td>{{order.status}}</td>
-
+						<td><a href="">Update</a></td>
+						<td><a href="">Delete</a></td>
 					</tr>
 				{% endfor %}
 
