--- a/crm/accounts/templates/accounts/dashboard.html
+++ b/crm/accounts/templates/accounts/dashboard.html
@@ -20,6 +20,7 @@
 				</tr>
 				{% for customer in customers %}
 					<tr>
+						<th><a class ="btn btn-sm btn-info" href="{% url 'customer' customer.id %}">View</a></th>
 						<td>{{customer.name}}</td>
 						<td>{{customer.phone}}</td>
 
@@ -47,8 +48,8 @@
 						<td>{{order.product}}</td>
 						<td>{{order.date_created}}</td>
 						<td>{{order.status}}</td>
-						<td><a href="">Update</a></td>
-						<td><a href="">Delete</a></td>
+						<td><a class ="btn btn-sm btn-info" href="">Update</a></td>
+						<td><a class ="btn btn-sm btn-danger" href="">Delete</a></td>
 					</tr>
 				{% endfor %}
 
