--- a/crm/accounts/templates/accounts/order_form.html
+++ b/crm/accounts/templates/accounts/order_form.html
@@ -1,12 +1,20 @@
 {% extends 'accounts/main.html' %}
 {% load static %}
 {% block content %}
-<form action="" method="POST">
-  {% csrf_token %}
-  {{form}}
 
-  <input type="submit" name="Submit">
+<div class="row">
+  <div class="col-md-6">
+    <div class="card card-body">
+      <form action="" method="POST">
+        {% csrf_token %}
+      {{form}}
 
-</form>
+      <input type="submit" name="Submit">
+
+      </form>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
