--- a/crm/accounts/templates/accounts/customer.html
+++ b/crm/accounts/templates/accounts/customer.html
@@ -11,7 +11,7 @@
 			<h5>Customer:</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'create_order' customer.id %}">Create Order</a>
 
 		</div>
 	</div>
@@ -56,7 +56,7 @@
 				<tr>
 					<th>Product</th>
 					<th>Category</th>
-					<th>Date Orderd</th>
+					<th>Date Ordered</th>
 					<th>Status</th>
 					<th>Update</th>
 					<th>Remove</th>
