--- a/crm/accounts/templates/accounts/navbar.html
+++ b/crm/accounts/templates/accounts/navbar.html
@@ -1,4 +1,11 @@
 <!--{% load static %}-->
+<style>
+  .hello-msg{
+  font-size: 18px;
+  color: #fff;
+  margin-right: 20px;
+  }
+</style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 <!--  <img src="{% static '/images/logo1.png/' %}">-->
@@ -19,4 +26,7 @@
       </li>
     </ul>
   </div>
+
+  <span class="hello-msg">Hello, {{request.user}}</span>
+  <span ><a class="hello-msg" href="{% url 'logout' %}">Logout</a></span>
 </nav>
